sakura-monitor/grafana/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana

spec:
  replicas: 0
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - sce312.tokyotech.org
              weight: 1
      tolerations:
        - key: monitor-node
          operator: Equal
          value: "true"
          effect: NoSchedule
      containers:
        - name: grafana
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
      volumes:
        - $patch: replace
        - name: data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: config
          configMap:
            name: grafana
